<resources>
    <string name="app_name">PiPaTi</string>

    <!-- Login -->
    <string name="TextViewTitulo">PIPATI</string>
    <string name="EditTextUsuario">Usuario</string>
    <string name="EditTextContraseña">Contraseña</string>
    <string name="BtnInciarSesion">Iniciar sesion</string>
    <string name="BtnRegistrarse">Registrarse</string>

    <!-- Registro -->
    <string name="EditTextRepetirContraseña">Repetir Contraseña</string>

    <!-- Menú Principal -->
    <string name="BtnJugar">Jugar</string>
    <string name="BtnHistorial">Historial</string>
    <string name="BtnAjustes">Ajustes</string>

    <!-- Menú Principal -->
    <string name="TextViewModosJuego">MODOS DE JUEGO</string>
    <string name="BtnModoClasico">Modo clasico</string>
    <string name="BtnModoRetos">Modo retos</string>

    <!-- Partida -->
    <string name="TextViewPartida">PARTIDA</string>
    <string name="TextViewPuntuacion">Puntuacion: </string>
    <string name="TextViewNombreUsuario">Jugador</string>
    <string name="TextViewNombreUsuario2">IA</string>

    <!-- Historial -->
    <string name="borrarHistorial">Borrar Historial</string>

    <!-- Ajustes -->
    <string name="BtnGuardar">Guardar</string>

    <string name="Español">Español</string>
    <string name="Ingles">Ingles</string>

    <string name="Azul">Azul</string>
    <string name="Verde">Verde</string>
    <string name="Amarillo">Amarillo</string>
    <string name="Rojo">Rojo</string>

    <string name="TextoTituloColorBotones">Color de botones</string>
    <string name="TextoSeleccionColor">Selecciona un color</string>
    <string name="TextoTituloIdioma">Idioma</string>
    <string name="TextoSeleccionIdioma">Selecciona el idioma</string>

</resources>