<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/TextoTituloColorBotones">
        <ListPreference
            android:key="button_color"
            android:title="@string/TextoSeleccionColor"
            android:entries="@array/button_colors"
            android:entryValues="@array/button_colors_values"
            android:defaultValue="#1089DA"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/TextoTituloIdioma">
        <ListPreference
            android:key="language"
            android:title="@string/TextoSeleccionIdioma"
            android:entries="@array/languages"
            android:entryValues="@array/languages_values"
            android:defaultValue="es"/>
    </PreferenceCategory>

</PreferenceScreen>