<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditTextUsuario" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditTextContraseña"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/edit_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditTextRepetirContraseña"
        android:inputType="textPassword" />
</LinearLayout>